chore: add NextJS dependencies to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "lucide-react": "^0.456.0",
-    "shadcn": "^2.1.6"
+    "shadcn": "^2.1.6",
+    "next": "14.1.0"
   }
 }
